# HotRepl

./: .editorconfig  .gitignore  AGENTS.md  HotRepl.slnx  README.md
.beads/: .beads-credential-key  .gitignore  metadata.json
.beads/hooks/: pre-commit  pre-push
.claude/skills/commit-guidelines/: SKILL.md
.claude/skills/hotrepl/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml
client/: pyproject.toml
client/src/hotrepl/: __init__.py  _client.py  _types.py  cli.py
client/tests/: conftest.py  test_complete.py  test_edge_cases.py  test_eval.py  test_eval_errors.py  test_handshake.py  test_ping.py  test_reset.py  test_subscribe.py
src/HotRepl.BepInEx/: BepInExHost.cs  HotRepl.BepInEx.csproj  ILRepack.targets  PluginInfo.cs  ReplPlugin.cs  UnityHelpers.cs  nuget.config
src/HotRepl.Core/: HotRepl.Core.csproj  IReplHost.cs  ReplConfig.cs  ReplEngine.cs
src/HotRepl.Core/Evaluation/: AssemblyFilter.cs  EvalResult.cs  ICodeEvaluator.cs  MonoEvaluator.cs
src/HotRepl.Core/Evaluator/: AssemblyFilter.cs  CompletionResult.cs  EvalJob.cs  EvalOutcome.cs  ICodeEvaluator.cs  MonoCSharpEvaluator.cs  StdoutCapture.cs
src/HotRepl.Core/Helpers/: HelperInjector.cs  HistoryTracker.cs  Repl.cs  ReplHelpers.cs
src/HotRepl.Core/Hosting/: IReplHost.cs  ReplConfig.cs  ReplEngine.cs
src/HotRepl.Core/Polyfills/: IsExternalInit.cs
src/HotRepl.Core/Protocol/: MessageSerializer.cs  Messages.cs
src/HotRepl.Core/Serialization/: IResultSerializer.cs  JsonResultSerializer.cs  ResultSerializer.cs
tests/HotRepl.Tests/: HotRepl.Tests.csproj
(+11 files in other folders)
